# budge

./: .gitignore  Cargo.toml  README.md  build.rs  dfjj  test.db  ui
.sqlx/: query-3931d9a04c2ec1bbfb1449bd370e465fb21ccfd4c128dd865011e8c9693b59a6.json  query-490df4ddc3ba70d0428d499c8fc2b743cc1d7dd7e25dfc0917ef9a50e68986e4.json  query-514a8219444424f3ad84eb43b0c0bb683be5f57e4c75a0a7e927da4aa00d1a0f.json  query-5823cab7fdd63eae7eef460f3c01a18d590bab9077a28e3ec64b9ce3adeae2be.json  query-5ac296862c08aa14869f4cb3d1ef5fd81134bc486ada5d4d5458276db0d6c9d4.json  query-5be2b17afb3178b305eccdc3f9d7ae333dabaf83b2fb30876eb8a8f179df0bd6.json  query-62d784ef7af4aefae5a831970b8d0992e1f3358642c0cc14f0cabde5d5a6ecf2.json  query-b666a0365df7ae808771df8c16f323caeccca40cd50c0cf48598ec5846015ece.json  query-bb4b7fef1c2f2ec2622b07c118f43881f4bc44ca4f0342af221f26b29ef7b5db.json  query-d50e9fb850ebe5799c91810b8d616159ea2b7935eb82a0df735c801ab0edca6d.json
migrations/: 20260112205652_init.sql
src/: app.rs  main.rs  ui.rs
