[package]
name = "budge"
version = "0.1.0"
edition = "2024"
description = "A budgeting app written in Rust"
license = "GPL-3.0-only"
repository = "https://github.com/vazpera/budge"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
itertools = "0.14.0"
ratatui = "0.30.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tui-input = "0.15.0"
